frontend/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: front-end-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
app: front-end
